--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator in HTML CSS & JavaScript</title>
     <link rel="stylesheet" href="../assets/style.css" />
+    <link rel="script" href="../assets/javaScript.js">
+
 </head>
 <body>
 <div class="container">
